--- a/src/definitions/parts/math.tex
+++ b/src/definitions/parts/math.tex
@@ -57,6 +57,10 @@
 \newcommand{\bd} {
     \mathfrak{d}
 }
+% Bundle :: Trivial
+\newcommand{\be} {
+    \mathfrak{e}
+}
 % Bundle :: Tangent
 \newcommand{\bt} {
     \mathfrak{t}
@@ -89,7 +93,7 @@
     O{1} O{0}
 } {
     \ifthenelse{\equal{#2}{0}} {
-        B_{#1}
+        B_{#1}(0)
     } {
         B_{#1}(#2)
     }
