--- a/src/definitions/parts/text.tex
+++ b/src/definitions/parts/text.tex
@@ -5,3 +5,9 @@
 \newcommand{\parttitle}[1] {%
     \textnormal{(#1)}%
 }
+\newcommand{\intref}[1] {%
+    (#1)%
+}
+\newcommand{\extref}[1] {%
+    [#1]%
+}
