--- a/src/sections/homotopy/parts/bundle.tex
+++ b/src/sections/homotopy/parts/bundle.tex
@@ -1,3 +1,6 @@
 % definition
-\definition{\parttitle{bundle map-germ}} \\
-% TODO
+\definition{\parttitle{bundle-germ}} \\
+Let $\bb$ and $\bb'$ be two microbundles over $B$ with the same fibre-dimension.
+A map-germ
+\[ F: (E, B) \double (E', B) \]
+is a \defterm{bundle-germ} if a representative map $f: U \to E'$ maps each fibre $j^{-1}(b)$ bijective to a fibre $j'^{-1}(b')$.
