--- a/src/sections/homotopy/parts/glueing.tex
+++ b/src/sections/homotopy/parts/glueing.tex
@@ -5,7 +5,7 @@ Additionally, we are given $\bgerm{F_\alpha}{\bb\restr{B_\alpha}}{\bb'}$, a coll
 $F_\alpha = F_\beta$ on $\bb\restr{B_\alpha \cap B_\beta}$
 Then there exists a bundle map-germ $\bgerm{F}{\bb}{\bb'}$ extending $F_\alpha$.
 % proof
-\begin{proof}
+\begin{myproof}
 Choose representative maps $f_\alpha: U_\alpha \to E'$ for $F_\alpha$ with $U_\alpha$ open.
 Since $F_\alpha = F_\beta$ on $\bb\restr{B_\alpha \cap B_\beta}$, $f_\alpha = f_\beta$ for an open neighborhood $U_{\alpha\beta}$ of $B_\alpha \cap B_\beta$.
 We define
@@ -24,4 +24,4 @@ We define
 Now we can define $f: U \to E'$ in the obvious way
 \[ f(u \in U_{\alpha\beta}) := f_\alpha(u) = f_\beta(u) \]
 which is a representative map for our desired $F$.
-\end{proof}
+\end{myproof}
