--- a/src/sections/induced/parts/cone.tex
+++ b/src/sections/induced/parts/cone.tex
@@ -8,7 +8,7 @@ where $(a, 0) \sim b :\iff f(a) = b$.
 \lemma{\parttitle{extending over a mapping cone}} \\
 A microbundle $\bb$ over $B$ can be extended to a microbundle over the mapping cone $B \sqcup_f CA$ if and only if $f^*\bb$ is trivial.
 % proof
-\begin{proof}
+\begin{myproof}
 We show both implications. \\
 $\implies$: \\
 Let $\bb'$ be an extension of $\bb$ over $B \sqcup_f CA$.
@@ -38,4 +38,4 @@ Now we explicitly construct the desired extended microbundle $\bundledef{\bb'}{B
     \item $j'([e]) := [j(e)]$ is well defined, because $[e] = [\tilde{e}] \implies [j(e)] = [j(e')]$
 \end{itemize}
 Now that we have constructed $\bb'$, this proves the claim.
-\end{proof}
+\end{myproof}
