--- a/src/sections/induced/parts/definition.tex
+++ b/src/sections/induced/parts/definition.tex
@@ -9,7 +9,7 @@ We can construct a microbundle $f^*\bb: \bundle{A}{E'}{i'}{j'}$ defined as follo
 \end{itemize}
 We call $f^*\bb$ the \defterm{induced microbundle} of $\bb$ over $f$.
 % proof
-\begin{proof}
+\begin{myproof}
 It is clear that $i'$ and $j'$ are continuous and that $id_A = j' \circ i'$.
 So it remains to be shown that $f^*\bb$ is locally trivial for every $a \in A$:
 \begin{itemize}
@@ -22,4 +22,4 @@ So it remains to be shown that $f^*\bb$ is locally trivial for every $a \in A$:
         \item $\phi'$ and $\phi'^{-1}$ are continuous because it's components are.
     \end{itemize}
 \end{itemize}
-\end{proof}
+\end{myproof}
