--- a/src/sections/induced/parts/trivial.tex
+++ b/src/sections/induced/parts/trivial.tex
@@ -2,8 +2,8 @@
 \lemma{\parttitle{induced trivial microbundle}} \\
 The induced microbundle $f^*\bb$ is trivial for every map $f: A \to B$, if $\bb$ is already trivial.
 % proof
-\begin{proof}
+\begin{myproof}
 Let $(V, \phi)$ be a global trivialization of $\bb$, i.e $V \cong_\phi B \times \R^n$.
 Now define $V' := (A \times V) \cap E'$ and $\phi'(a, e) := (a, \phi^{(2)}(e))$.
 Obviously, $V'$ is a neighborhood of $i'(A)$ and also $\phi'$ is a homeomorphism with inverse $\phi'^{(-1)}(a, x) = (a, \phi^{-1}(f(a), x))$.
-\end{proof}
+\end{myproof}
