--- a/src/sections/normal/parts/trivial.tex
+++ b/src/sections/normal/parts/trivial.tex
@@ -8,6 +8,6 @@ there exists a trivial normal microbundle of $N$ in $M$.
 \lemma{\parttitle{criteria for product neighborhoods}} \\
 A submanifold $N \sub M$ has a product neighborhood if and only if there exists a neighborhood $U$ of $N$ with $(U, M) \cong (M \times R^n, M \times 0)$.
 % proof
-\begin{proof}
+\begin{myproof}
 This follows directly from the definition of normal microbundles and the criteria for trivial microbundles.
-\end{proof}
+\end{myproof}
