--- a/src/sections/whitney/parts/compatibility.tex
+++ b/src/sections/whitney/parts/compatibility.tex
@@ -3,7 +3,7 @@
 Let $\bb_1$ and $\bb_1$ be two microbundles over $B$ and $f: A \to B$ a map.
 Induced microbundle and whitney sum are compatible, i.e. $f^*(\bb_1 \oplus \bb_2) \cong f^*\bb_1 \oplus f^*\bb_2$
 % proof
-\begin{proof}
+\begin{myproof}
 From the definition of the induced microbundle and the whitney sum, we can derive the total spaces:
 \begin{enumerate}
     \item $E(f^*(\bb_1 \oplus \bb_2)) = \{(a, (e_1, e_2)) \in A \times (E_1 \times E_2) \mid j_1(e_1) = j_2(e_2) = f(a) \}$
@@ -12,4 +12,4 @@ From the definition of the induced microbundle and the whitney sum, we can deriv
 Those two total spaces are homeomorphic via $\phi(a, (e_1, e_2)) := ((a, e_1), (a, e_2))$ and
 $\phi^{-1}((a, e_1), (a, e_2)) = (a, (e_1, e_2))$. $\phi$ and $\phi^{-1}$ are continuous because they are componentwise continuous.
 Obviously, $\phi \circ i = i$ and $\phi \circ j = j$, which concludes the proof. 
-\end{proof}
+\end{myproof}
