--- a/src/sections/microbundle/parts/isomorphy.tex
+++ b/src/sections/microbundle/parts/isomorphy.tex
@@ -1,10 +1,17 @@
-% statement
-\definition{\parttitle{isomorphic microbundles}} \\
-Two microbundles $\bb_1 := (B, E_1, i_1, j_2)$ and $\bb_2 := (B, E_2, i_2, j_2)$ are said to be \defterm{isomorphic} if
-there exist neighborhoods $V_1 \sub E_1$ of $i_1(B)$ and $V_2 \sub E_2$ of $i_2(B)$ with
-an homeomorphism $\phi: V_1 \isomto V_2$, so that the following diagram commutes: 
-\[\begin{tikzcd}
-    & V_1 \ar[dr, "j_1"] \ar[dd, "\phi"] & \\
-    B \ar[ur, "i_1"] \ar[dr, "i_2"'] & & B \\
-    & V_2 \ar[ur, "j_2"'] &
-\end{tikzcd}\]
+% foreword
+Before we look at examples of microbundles, we should first clarify
+what it means for two microbundles to be isomorphic.
+
+% def: isomorphy
+\begin{mydefinition}[isomorphy]
+    Two microbundles $\bundledef{\bb_1}{B}{E_1}{i_1}{j_1}$ and $\bundledef{\bb_2}{B}{E_2}{i_2}{j_2}$ are \defterm{isomorphic} if
+    there exist neighborhoods $V_1 \sub E_1$ of $i_1(B)$ and $V_2 \sub E_2$ of $i_2(B)$ with
+    a homeomorphism $\phi: V_1 \isomto V_2$ such that the following diagram commutes: 
+    \[
+        \begin{tikzcd}
+            & V_1 \ar[dr, "j_1\vert_{V_1}"] \ar[dd, "\phi"] & \\
+            B \ar[ur, "i_1"] \ar[dr, "i_2"'] & & B \\
+            & V_2 \ar[ur, "j_2\vert_{V_2}"'] &
+        \end{tikzcd}
+    \]
+\end{mydefinition}
