--- a/src/sections/microbundle/parts/totalspace.tex
+++ b/src/sections/microbundle/parts/totalspace.tex
@@ -1,16 +1,24 @@
-% statement
-\proposition{\parttitle{restricting the total space}} \\
-Let $\bb: \bundle{B}{E}{i}{j}$ be a microbundle and $E'$ an arbitray neighborhood of $i(B)$.
-The restriction $\bundledef{\bb'}{B}{E'}{i}{j\restr{E'}}$ is a microbundle isomorphic to $\bb$.
-% proof
-\begin{proof}
-Let $b \in B$. \\
-Choose an arbitray trivialization $(U, V, \phi)$ over $\bb$ of $b$.
-We restrict $\phi: V \to U \times R^n$ to $V \cap E'$.
-Since $i(b) \in V$ is open and $E'$ is a neighborhood of $i(B)$, it follows that $\phi(V \cap E')$ is a neighborhood of $(b, 0)$.
-\\ $\implies \exists (b, 0) \in U' \times X \sub \phi(V \cap E')$, where $U' \sub U$ and $X \sub R^n$ are open
-\\ $\implies \exists \varepsilon > 0: U' \times B_\varepsilon(0) \sub \phi(V \cap E')$ \\
-Since $B_\varepsilon(0) \cong R^n$, it follows that $U' \times R^n \cong U' \times B_\varepsilon(0) \cong \phi^{-1}(U' \times B_\varepsilon(0))$.
-Choosing $V' := \phi^{-1}(U' \times B_\varepsilon(0)) \sub V$, we see that $\bb'$ is a microbundle.
-We easily see, that $\bb$ is isomorphic to $\bb'$ via the identity.
-\end{proof}
+% foreword
+The following proposition shows that, when studying microbundles,
+we are not interested in the entire total space
+but only in an arbitrarily small neighborhood of the base space.
+This is actually one of the biggest differences behind
+the concept of microbundles and classical vector-bundles.
+
+% prop: restricting the total space
+\begin{myproposition}
+    % statement
+    For a microbundle $\bundledef{\bb}{B}{E}{i}{j}$ over $B$, we can be restrict the total space $E$ to an arbitray neighborhood $E' \sub E$ of $i(B)$
+    where the resulting microbundle is isomorphic to $\bb$.
+    % proof
+    \begin{myproof}
+        For an arbitray $b \in B$, choose a local trivialization $(U, V, \phi)$.
+
+        The intersection $V \cap E'$ is a neighborhood of $i(b)$ because $V$ and $E'$ both are.
+        It follows that $\phi(V \cap E')$ is a neighborhood of $(b, 0)$. Hence there exist $U' \sub B$ open and $\ball[\varepsilon] \sub \R^n$ such that $U' \times \ball[\varepsilon] \sub \phi(V \cap E')$. 
+        Now we construct our local trivialization by choosing $V' := \phi^{-1}(U' \times \ball[\varepsilon])$ and the fact that $\ball[\varepsilon] \cong \R^n$:
+        \[ U' \times \R^n \cong U' \times \ball[\varepsilon] \cong V' \]
+
+        We easily see that the resulting microbundle is isomorphic to $\bb$ via the identity.
+    \end{myproof}
+\end{myproposition}
