--- a/src/sections/microbundle/parts/underlying.tex
+++ b/src/sections/microbundle/parts/underlying.tex
@@ -1,10 +1,12 @@
-% statement
-\example{\parttitle{underlying microbundle}} \\
-Let $\xi: E \xto{\pi} B$ be a $n$-dimensional vector bundle:
-The microbundle $\lvert \xi \rvert: \bundle{B}{E}{i}{\pi}$ with $i(b) := \phi_b(b, 0)$, where
-$\phi_b: U_b \times \R^n \to \pi^{-1}(U_b)$ is the local trivialization over a
-neighborhood $U_b \sub B$ of $b$. We call $\lvert \xi \rvert$ the \defterm{underlying microbundle} of $\xi$
-% proof
-\begin{proof}
-% TODO
-\end{proof}
+% underlying microbundle
+\begin{myexample}[underlying microbundle]
+    % def: underlying microbundle
+    Let $\xi: E \xto{\pi} B$ be a $n$-dimensional vector bundle.
+    The microbundle $\lvert \xi \rvert: \bundle{B}{E}{i}{\pi}$ where $i(b) := \phi_b(b, 0)$, where
+    $\phi_b: U_b \times \R^n \to \pi^{-1}(U_b)$ is the local trivialization over a
+    neighborhood $U_b \sub B$ of $b$. We call $\lvert \xi \rvert$ the \defterm{underlying microbundle} of $\xi$
+    % proof: microbundle properties
+    \begin{myproof}
+        TODO
+    \end{myproof}
+\end{myexample}
