--- a/src/sections/normal/parts/totalspace.tex
+++ b/src/sections/normal/parts/totalspace.tex
@@ -3,7 +3,7 @@
 Let $\bt_N$ and $\bt_M$ be the tangent microbundles of $N$ and $M$.
 The total space $E(\iota^*\bt_M)$ and $E(r^*\bt_N)$ are homeomorphic.
 % proof
-\begin{proof}
+\begin{myproof}
 We explicitly construct a homeomorphism:
 \begin{enumerate}
     \item $E(\iota^*\bt_M) = \{ (n, (m_1, m_2)) \in N \times (M \times M) \mid \iota(n) = m_1\}$
@@ -12,7 +12,7 @@ We explicitly construct a homeomorphism:
 Now, we have the homeomorphism $\phi: E(\iota^*\bt_M) \to E(r^*\bt_N)$ with
 $\phi(n, (m_1, m_2)) = (m_2, (r(m_2), n))$ and $\phi^{-1}(m, (n_1, n_2)) = (n_2, (n_2, m))$.
 We easily see that $\phi$ suffices all requirements of $E(\iota^*\bt_M)$ and $E(r^*\bt_N)$.
-\end{proof}
+\end{myproof}
 
 % remark
 \begin{remark}
@@ -27,7 +27,7 @@ Note that the following diagram commutes
 \lemma{(normal microbundle on total space)}
 There exists a normal microbundle $\bn$ of $N$ in $E(r^*\bt_N)$ with $\bn \cong \iota^*\bt_M$.
 % proof
-\begin{proof}
+\begin{myproof}
 Obviously, $\bn := r^*\bt_N \restr{N}$ is a normal microbundle of $N$ in $E(r^*\bt_N)$.
 Since $E(r^*\bt_N \restr{N}) \sub E(r^*\bt_N)$, isomorphy follows from the previous lemma and remark.
-\end{proof}
+\end{myproof}
