--- a/src/sections/whitney/parts/definition.tex
+++ b/src/sections/whitney/parts/definition.tex
@@ -8,7 +8,7 @@ We define the \defterm{whitney sum} $\bb_1 \oplus \bb_2$ as follows:
     \item $j(e_1, e_2) := j_1(e_1) = j_2(e_2)$
 \end{itemize}
 % proof
-\begin{proof}
+\begin{myproof}
 Let $b \in B$. \\
 Choose $U_1, V_1, \phi_1$ and $U_2, V_2, \phi_2$ accordingly from the local trivialization of $b$ over $\bb_1$ and $\bb_2$:
 \begin{itemize}
@@ -18,4 +18,4 @@ Choose $U_1, V_1, \phi_1$ and $U_2, V_2, \phi_2$ accordingly from the local triv
 \end{itemize}
 Note that $\phi_1^{(1)}(e_1) = \phi_2^{(1)}(e_2)$.
 Local triviality follows directly from it's components.
-\end{proof}
+\end{myproof}
