Refactored and extended Introduction Chapter (finished), started with Induced Chapter

--- a/src/definitions/parts/math.tex
+++ b/src/definitions/parts/math.tex
@@ -25,6 +25,9 @@
 \newcommand{\incl} {
     \hookrightarrow{}
 }
+\newcommand{\xincl}[1] {
+    \overset{\iota}{\hookrightarrow}
+}
 \newcommand{\subm} {
     \twoheadrightarrow{}
 }
