--- a/src/sections/homotopy/parts/theorem.tex
+++ b/src/sections/homotopy/parts/theorem.tex
@@ -71,7 +71,7 @@ Pieced together with the previous lemma, we obtain $R: \bb \times [0, 1]\to \bb 
 \end{myproof}
 
 % theorem
-\theorem{\parttitle{Homotopy Theorem}} \\
+\theorem{\parttitle{Homotopy Theorem}} \label{homotopy::theorem} \\
 Let $\bb$ be a microbundle of $B$ and $f, g: A \to B$ be two maps.
 \[ f \simeq g \implies f^*\bb \cong g^*\bb \]
 % proof
