--- a/src/packages.tex
+++ b/src/packages.tex
@@ -3,6 +3,10 @@
 \usepackage{amsthm}
 \usepackage{mathtools}
 \usepackage{hyperref} % Links
+\usepackage{cleveref} % Referring to Statements
+\crefdefaultlabelformat{#2\bfseries\upshape(#1)#3}          
+\creflabelformat{equation}{#2\bfseries\upshape(#1)#3}
+\hypersetup{colorlinks=true,citecolor=red, linkcolor=blue}
 \usepackage{tikz-cd} % Diagrams
 \usepackage{parskip} % No Paragraph Indentation
 \usepackage{xparse} % Multiple Optional Arguments
