--- a/src/sections/induced/parts/definition.tex
+++ b/src/sections/induced/parts/definition.tex
@@ -1,25 +1,27 @@
 % statement
-\definition{\parttitle{induced microbundle}} \\
-Let $\bb: \bundle{B}{E}{i}{j}$ be a microbundle and $f: A \to B$ a continuous map.
-We can construct a microbundle $f^*\bb: \bundle{A}{E'}{i'}{j'}$ defined as follows:
-\begin{itemize}
-    \item $E' := \{ (a, e) \in A \times E \mid f(a) = j(e) \}$
-    \item $i': A \to E'$ with $i'(a) := (a, (i \circ f)(a))$
-    \item $j': E' \to A$ with $j'(a, e) := a$
-\end{itemize}
-We call $f^*\bb$ the \defterm{induced microbundle} of $\bb$ over $f$.
-% proof
-\begin{myproof}
-It is clear that $i'$ and $j'$ are continuous and that $id_A = j' \circ i'$.
-So it remains to be shown that $f^*\bb$ is locally trivial for every $a \in A$:
-\begin{itemize}
-    \item $U' := f^{-1}(U) \sub A$ is an open neighborhood of $a$.
-    \item $V' := j'^{-1}(U') \sub E'$ is an open neighborhood of $i'(U')$.
-    \item $\phi': V' \isomto U' \times \R^n, \phi'(a, e) := (a, \pi_2(\phi(e)))$ is a homeomorphism.
+\begin{mydefinition}[induced microbundle]
+    Let $\bb: \bundle{B}{E}{i}{j}$ be a microbundle and $f: A \to B$ be a continuous map.
+    The \defterm{induced microbundle} $\bundledef{f^*\bb}{A}{E'}{i'}{j'}$ is defined as follows:
     \begin{itemize}
-        \item $\phi'$ is well defined because $(a, e) \in V': j(e) = f(a) \in U \implies e \in V$.
-        \item $\phi'$ is bijective with $\phi'^{-1}(a, v) = (a, \phi^{-1}(f(a), v))$.
-        \item $\phi'$ and $\phi'^{-1}$ are continuous because it's components are.
+        \item $E' := \{ (a, e) \in A \times E \mid f(a) = j(e) \}$
+        \item $i': A \to E'$ with $i'(a) := (a, (i \circ f)(a))$
+        \item $j': E' \to A$ with $j'(a, e) := a$
     \end{itemize}
-\end{itemize}
+\end{mydefinition}
+% proof
+\begin{myproof}[$f^*\bb$ is a microbundle]
+    % continuity and compatibility
+    It is clear that $i'$ and $j'$ are continuous and that $id_A = j' \circ i'$.
+    So it remains to be shown that $f^*\bb$ is locally trivial.
+
+    % local triviality
+    Choose a local trivialization $(U, V, \phi)$ for an arbitrary $a \in A$.
+    \begin{itemize}
+        \item $U' := f^{-1}(U) \sub A$ neighborhood of $a$.
+        \item $V' := j'^{-1}(U') \sub E'$ neighborhood of $i'(a)$.
+        \item $\phi': V' \isomto U' \times \R^n, \phi'(a, e) := (a, \pi_2(\phi(e)))$.
+    \end{itemize}
+    The map $\phi'$ is well-defined because $(a, e) \in V': j(e) = f(a) \in U \implies e \in V$.
+    The existence of an inverse $\phi'^{-1}(a, v) = (a, \phi^{-1}(f(a), v))$ and component-wise continuity show that $\phi'$ is a homeomorphism.
+    This proves that $(U', V', \phi')$ is a local trivialization for $a$. 
 \end{myproof}
