--- a/src/sections/induced/parts/restriction.tex
+++ b/src/sections/induced/parts/restriction.tex
@@ -1,11 +1,12 @@
-% statement
-\example{\parttitle{restricted microbundle}} \\
-Let $\bb: \bundle{B}{E}{i}{j}$ be a microbundle and $A \sub B$:
-The induced microbundle $\iota^*\bb$ with $\iota: A \incl B$ being the inclusion map is called the \defterm{restricted microbundle} and
-we write $\bb \restr{A} := \iota^*\bb$.
-% remark
+% def: restricted microbundle
+\begin{myexample}[restricted microbundle]    
+    Let $\bb: \bundle{B}{E}{i}{j}$ be a microbundle and $A \sub B$ be a subspace.
+    The \defterm{restricted microbundle} $\bb\restr{A}$ is the induced microbundle $\iota^*\bb$ where $\iota: A \incl B$ is the inclusion map.
+\end{myexample}
+
+% rmk: total space
 \begin{remark}
-In the following, we'll consider $E(\bb\restr{A})$ a subset of $E(\bb)$.
-This is justified because
-$E(\bb\restr{A}) = \{ (a, e) \in A \times E(\bb) \mid a = j(e) \} \cong \{ e \in E(\bb) \mid j(e) \in A \} \sub E(\bb)$.
+    In the following we consider $E(\bb\restr{A})$ a subset of $E(\bb)$.
+    This is justified because
+    $E(\bb\restr{A}) = \{ (a, e) \in A \times E(\bb) \mid a = j(e) \}$ is homeomorphic to $\{ e \in E(\bb) \mid j(e) \in A \} \sub E(\bb)$.
 \end{remark}
