--- a/thesis.tex
+++ b/thesis.tex
@@ -7,6 +7,8 @@
 \begin{document}
 % Document :: Title
 \input{src/title.tex}
+\tableofcontents
+\clearpage
 % Document :: Microbundle
 \input{src/sections/microbundle/section.tex}
 % Document :: Induced
