--- a/src/definitions/global.tex
+++ b/src/definitions/global.tex
@@ -1,3 +1,3 @@
-\input{src/definitions/parts/environments.tex}
-\input{src/definitions/parts/text.tex}
-\input{src/definitions/parts/math.tex}
+\input{src/definitions/parts/environments}
+\input{src/definitions/parts/text}
+\input{src/definitions/parts/math}
