--- a/src/packages.tex
+++ b/src/packages.tex
@@ -2,6 +2,10 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{mathtools}
+
+% Dummy Text NOTE: Remove before Distribution
+\usepackage{lipsum}
+
 \usepackage{hyperref} % Links
 \usepackage{cleveref} % Referring to Statements
 \crefdefaultlabelformat{#2\bfseries\upshape(#1)#3}          
@@ -11,3 +15,7 @@
 \usepackage{parskip} % No Paragraph Indentation
 \usepackage{xparse} % Multiple Optional Arguments
 \usepackage{ifthen} % If-Else Statements
+
+% Images
+\usepackage{graphicx}
+\graphicspath{{images/}}
