Worked on Homotopy Chapter

--- a/src/definitions/parts/environments.tex
+++ b/src/definitions/parts/environments.tex
@@ -71,7 +71,7 @@
   \ifthenelse{\equal{#1}{}} {
     \begin{proof}\blankbreak{}
   } {
-    \begin{proof}[Proof that #1.]\blankbreak{}
+    \begin{proof}[Proof #1.]\blankbreak{}
   }
 } {
   \end{proof}
