Worked on Homotopy Chapter and prepared for review

--- a/src/packages.tex
+++ b/src/packages.tex
@@ -16,6 +16,9 @@
 \usepackage{xparse} % Multiple Optional Arguments
 \usepackage{ifthen} % If-Else Statements
 
+% Underline
+\usepackage{soul}
+
 % Images
 \usepackage{graphicx}
 \graphicspath{{images/}}
