Worked on Suspension Chapter

--- a/src/definitions/parts/math.tex
+++ b/src/definitions/parts/math.tex
@@ -125,3 +125,15 @@
 % \newcommand{\wlog} {
 %     w.l.o.g.\
 % }
+
+% set
+\newcommand{\set}[2] {%
+    \{#1:#2\}%
+}
+\newcommand{\coll}[1]{%
+    \{#1\}%
+}
+
+\newcommand{\tand} {%
+    \text{ and }%
+}
