--- a/src/titlepage.tex
+++ b/src/titlepage.tex
@@ -7,13 +7,13 @@
 
         % Title
         \Huge
-        \textbf{Thesis Title}
+        \textbf{Microbundles on Topological Manifolds}
 
         \vspace{0.5cm} % spacing
 
         % Subtitle
         \LARGE
-        Thesis Subtitle
+        based on Milnor's studies on Microbundles
 
         \vspace{1.5cm} % spacing
 
