--- a/src/packages.tex
+++ b/src/packages.tex
@@ -15,6 +15,7 @@
 \usepackage{parskip} % No Paragraph Indentation
 \usepackage{xparse} % Multiple Optional Arguments
 \usepackage{ifthen} % If-Else Statements
+\usepackage{enumerate} % Enumerate with romans
 
 % Underline
 \usepackage{soul}
